# quiz_hub

./: .dockerignore  ADMIN_DASHBOARD.md  AUTH_SETUP.md  DEPLOYMENT_SUMMARY.md  DEPLOY_FRONTEND.md  Dockerfile  FIX_DATABASE_PERMISSIONS.md  FIX_DATABASE_VOLUME.md  FIX_FRONTEND_BACKEND_URL.md  FIX_SUBSCRIPTION_NOT_ACTIVATING.md  IMPRESSUM_INFO.md  PROJECT_SUMMARY.md  RAILWAY_CLI_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_VOLUME_FIX.md  STRIPE_ENV_VARIABLES.md  STRIPE_IMPLEMENTATION_ANALYSIS.md  STRIPE_WEBHOOK_SETUP.md  YOUR_STRIPE_WEBHOOK_URL.md  agent.md  check_volumes.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  logs.1763251916794.json  railway.json  readme.md
docs/: one-pager.html  (+10 more)
quiz_backend/: .env.temp  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  env_template.txt  fix_essay_qa_difficulty.py  heroku.yml  init_db.py  pyproject.toml  quiz_database.db  requirements.txt  run_migration.py  start.sh  test_stripe_integration.py  update_db.py
quiz_backend/.github/workflows/: heroku-deploy.yml
quiz_backend/alembic/: env.py
quiz_backend/alembic/versions/: 20251107_0001_initial_schema.py  20251107_0002_add_created_by_to_topics.py  20251107_0003_add_free_tokens_to_users.py  20251107_0004_add_referral_system.py  20251108_0001_add_share_code_to_quizzes.py  (+9 more)
quiz_backend/backend/: api.py
quiz_backend/config/: app_config.yaml
quiz_backend/docs/: AI_COST_MONITORING.md
quiz_backend/migrations/: add_content_id_to_references.py  add_password_hash_to_users.py  check_subscriptions.py  fix_subscription_plan_types.py  fix_users_table_schema.py
(+178 files in other folders)
